Archive2/d9/b70ae30c8c8112/output
main.cpp: In function 'int main()':
main.cpp:43:61: error: no matching function for call to 'A::test(MySpecialType)'
     std::cout << "qwer " << B(4).then->test(MySpecialType(5)) << std::endl;
                                                             ^
main.cpp:43:61: note: candidate is:
main.cpp:13:10: note: bool A::test(double)
     bool test(double other) {
          ^
main.cpp:13:10: note:   no known conversion for argument 1 from 'MySpecialType' to 'double'
1
